--- a/FRONTEND/src/app/pages/retiro-dinero/retiro-dinero.component.html
+++ b/FRONTEND/src/app/pages/retiro-dinero/retiro-dinero.component.html
@@ -38,7 +38,7 @@
         </form>
     </div>
 </div>
-
+<a href="/dashboard" routerLink="/dashboard" class="btn btn-info">Volver</a>
 
 
 <!-- <div>
