--- a/FRONTEND/src/app/pages/retiro-dinero/retiro-dinero.component.html
+++ b/FRONTEND/src/app/pages/retiro-dinero/retiro-dinero.component.html
@@ -16,7 +16,7 @@
         </div>
         <form [formGroup]="form" action="#">
             <div>
-                <label for="selectOp">Cuenta</label>
+                <label for="selectCuenta">Cuenta</label>
                 <select class="form-select decorated" aria-label="Default select example" id="selectCuenta" formControlName="selectCuenta">
                     <option value="">---Seleccionar---</option>
                     <option value="1">Cuenta en ARS</option>
